fixing the error in spacing in top section

--- a/style.css
+++ b/style.css
@@ -130,13 +130,14 @@ h4 {
   flex: 1;
   max-width: 600px;
   z-index: 2;
+  margin-top: 30px  ;
 }
 
 .greeting {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: var(--text-secondary);
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .name-highlight {
@@ -310,7 +311,7 @@ h4 {
 
 /* Actual Image */
 .bgimage {
-  width: 100%;
+  width: 97%;
   height: 106%;
   object-fit: cover;
   border-radius: 50%;
@@ -747,7 +748,7 @@ footer {
     position: absolute;
     top: 80px;
     left: 0;
-    width: 100%;
+    width:100%;
     background-color: var(--dark-bg);
     flex-direction: column;
     align-items: center;
